[workspace]
resolver = "2"

members = [
    "core",
    "effects",
    "output-null",
    "output-terminal",
    "output-net",
    "interface-cli",
    "interface-grpc",
    "interface-grpc/proto",
    "interface-grpc/client",
    "interface-mqtt",
    "interface-restore",
    "dyn",
    "dyn/derive",
    "dyn/runner",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "Dustin Frisch <fooker@lab.sh>",
]

license = "MIT"

[workspace.dependencies]
photonic = { path = "core" }

tokio = { version = "1.35" }
tokio-stream = { version = "0.1.15" }

futures = { version = "0.3" }

anyhow = "1"

palette = { version = "0.7", features = ["random"] }

rand = { version = "0.8", features = ["small_rng"] }

num-traits = { version = "0.2" }

noise = { version = "0.9" }
