[workspace]
resolver = "2"

members = [
    "audio",
    "core",
    "effects",
    "output-null",
    "output-terminal",
    "output-net",
    "interface-cli",
    "interface-grpc",
    "interface-grpc/proto",
    "interface-grpc/client",
    "interface-mqtt",
    "interface-restore",
    "lua",
    "dynamic",
    "dynamic/runner",
    "examples", "output-split",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = [
    "Dustin Frisch <fooker@lab.sh>",
]

license = "MIT"

[workspace.dependencies]
photonic = { path = "core" }

tokio = { version = "1.35" }
tokio-stream = { version = "0.1.15" }

futures = { version = "0.3" }

anyhow = "1"

palette = { version = "0.7", features = ["random"] }

rand = { version = "0.8", features = ["small_rng"] }

num-traits = { version = "0.2" }

noise = { version = "0.9" }

serde = { version = "1" }

async-trait = { version = "0.1" }

[workspace.lints.rust]
bad_style = "deny"
dead_code = "deny"
improper_ctypes = "deny"
non_shorthand_field_patterns = "deny"
no_mangle_generic_items = "deny"
overflowing_literals = "deny"
path_statements = "deny"
patterns_in_fns_without_body = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unconditional_recursion = "deny"
unused = "deny"
unused_allocation = "deny"
unused_comparisons = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_parens = "deny"
unused_qualifications = "deny"
while_true = "deny"

incomplete_features = { level = "allow", priority = -1 }

[workspace.lints.clippy]
needless_return = "allow"
