[workspace]
resolver = "2"

members = [
    "audio",
    "dynamic",
    "dynamic/runner",
    "effects",
    "lua",
    "interface-cli",
    "interface-grpc",
    "interface-grpc/proto",
    "interface-grpc/client",
    "interface-grpc/cli",
    "interface-mqtt",
    "interface-restore",
    "output-net",
    "output-null",
    "output-split",
    "output-terminal",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = [
    "Dustin Frisch <fooker@lab.sh>",
]

license = "MIT"

description = "Dynamic light controller and animator"
homepage = "https://photonic.live"
readme = "./README.md"

keywords = [
    "lights",
    "dmx",
    "leds",
    "animation",
    "scene-graph",
]

[workspace.dependencies]
photonic = { version = "0.1.1", path = "." }
photonic-dynamic = { version = "0.1.1", path = "dynamic" }

tokio = { version = "1.35" }
tokio-stream = { version = "0.1.15" }

futures = { version = "0.3" }

anyhow = "1"

palette = { version = "0.7", features = ["random"] }

rand = { version = "0.9", features = ["small_rng"] }

num-traits = { version = "0.2" }
itertools = { version = "0.14.0" }

noise = { version = "0.9" }

serde = { version = "1" }

async-trait = { version = "0.1" }

[workspace.lints.rust]
bad_style = "deny"
dead_code = "deny"
improper_ctypes = "deny"
non_shorthand_field_patterns = "deny"
no_mangle_generic_items = "deny"
overflowing_literals = "deny"
path_statements = "deny"
patterns_in_fns_without_body = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unconditional_recursion = "deny"
unused = "deny"
unused_allocation = "deny"
unused_comparisons = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_parens = "deny"
unused_qualifications = "deny"
while_true = "deny"

incomplete_features = { level = "allow", priority = -1 }

[workspace.lints.clippy]
needless_return = "allow"

[package]
name = "photonic"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[features]
boxed = ["dep:async-trait"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["time", "macros"] }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }
palette = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

num-traits = { workspace = true }

async-trait = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
palette = { workspace = true }
noise = { workspace = true }

photonic-effects = { path = "effects" }
photonic-lua = { path = "lua" }
photonic-audio = { path = "audio" }
photonic-interface-restore = { path = "interface-restore" }
photonic-interface-cli = { path = "interface-cli" }
photonic-interface-mqtt = { path = "interface-mqtt" }
photonic-interface-grpc = { path = "interface-grpc" }
photonic-output-net = { path = "output-net" }
photonic-output-null = { path = "output-null" }
photonic-output-terminal = { path = "output-terminal" }

[lints]
workspace = true
