[package]
name = "photonic-app"

version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
photonic = { workspace = true }
photonic-effects = { path = "../effects" }
photonic-output-terminal = { path = "../output-terminal" }

palette = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_dhall = "0.12"
toml = "0.8"
ron = "0.8"

async-trait = "0.1"

structopt = { version = "0.3", features = ["color"] }
