[package]
name = "photonic-audio"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
photonic = { workspace = true }

anyhow = { workspace = true }

cpal = { version = "0.15" }

[dev-dependencies]
photonic-effects = { path = "../effects" }
photonic-output-terminal = { path = "../output-terminal" }

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
