[package]
name = "photonic"

version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["time"] }
futures = { workspace = true }
palette = { workspace = true }
rand = { workspace = true }

num-traits = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
photonic-output-null = { path = "../output-null" }
photonic-effects = { path = "../effects" }
