[package]
name = "photonic"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
boxed = ["dep:async-trait"]

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["time", "macros"] }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }
palette = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }

num-traits = { workspace = true }

paste = "1"

async-trait = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
photonic-output-null = { path = "../output-null" }
photonic-effects = { path = "../effects" }

[lints]
workspace = true
