[package]
name = "photonic-dyn"

version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
photonic = { workspace = true }
photonic-output-terminal = { path = "../output-terminal" }

photonic-dyn-derive = { path = "./derive" }

palette = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

inventory = { version = "0.3" }

async-trait = "0.1"
