[package]
name = "photonic-dynamic"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
photonic = { workspace = true, features = ["boxed"] }

palette = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde-value = "0.7"

inventory = { version = "0.3" }

[lints]
workspace = true
