[package]
name = "photonic-effects"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
dynamic = ["dep:photonic-dynamic"]

[dependencies]
photonic = { workspace = true }
photonic-dynamic = { path = "../dynamic", optional = true }

futures = { workspace = true }

anyhow = { workspace = true }
palette = { workspace = true, features = ["serializing"] }
rand = { workspace = true }
num-traits = { workspace = true }
noise = { workspace = true }

ezing = "0.2"
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
