[package]
name = "photonic-effects"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
dynamic = [
    "dep:photonic-dynamic",
    "dep:humantime-serde",
]

[dependencies]
photonic = { workspace = true }
photonic-dynamic = { path = "../dynamic", optional = true }

futures = { workspace = true }

anyhow = { workspace = true }
palette = { workspace = true, features = ["serializing"] }
rand = { workspace = true }
num-traits = { workspace = true }
noise = { workspace = true }

ezing = "0.2"
serde = { version = "1.0", features = ["derive"] }
humantime-serde = { version = "1.1.1", optional = true }

[lints]
workspace = true

