[package]
name = "example"
version = "0.1.0"
authors = ["Dustin Frisch <fooker@lab.sh>"]
edition = "2018"

[dependencies]
photonic-core = {path="../photonic-core"}
photonic-mqtt = {path="../photonic-mqtt"}
photonic-net = {path="../photonic-net"}
photonic-console = {path="../photonic-console"}
photonic-effects = {path="../photonic-effects"}
photonic-rpi = {path="../photonic-rpi"}
failure = "0.1"
