[package]
name = "examples"

version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
photonic = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
palette = { workspace = true }
noise = { workspace = true }

photonic-effects = { path = "../effects" }
photonic-interface-cli = { path = "../interface-cli" }
photonic-interface-mqtt = { path = "../interface-mqtt" }
photonic-output-net = { path = "../output-net" }
photonic-output-null = { path = "../output-null" }
photonic-output-terminal = { path = "../output-terminal" }
