[package]
name = "photonic-interface-cli"

version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
photonic = { workspace = true }

palette = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

shlex = { version = "1.3" }

