[package]
name = "photonic-interface-cli"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
photonic = { workspace = true }

palette = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }

shlex = { version = "1.3" }

[lints]
workspace = true

