[package]
name = "photonic-interface-grpc"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
photonic = { workspace = true }
photonic-interface-grpc-proto = { version = "0.1.1", path = "./proto", features = ["server"] }

palette = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

tonic = { version = "0.12.2" }
prost = "0.13.3"
prost-types = "0.13.3"

[lints]
workspace = true
