[package]
name = "photonic-interface-grpc"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
photonic = { workspace = true }
photonic-interface-grpc-proto = { version = "0.1.2", path = "./proto", features = ["server"] }

palette = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

tonic = { version = "0.14.0" }

[lints]
workspace = true
