[package]
name = "photonic-interface-mqtt"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
photonic = { workspace = true }

palette = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }

rumqttc = { version = "0.25.0", features = ["url"] }
bytes = "1.5"

[lints]
workspace = true
