[package]
name = "photonic-interface-restore"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
photonic = { workspace = true }

#palette = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
#futures = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
