[package]
name = "photonic-interface-restore"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
photonic = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

palette = { workspace = true, features = ["serializing"]}

[lints]
workspace = true
