[package]
name = "photonic-lua"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
photonic = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

ezlua = { version = "0.5", features = ["async", "vendored"] }

[dev-dependencies]
photonic-output-terminal = { path = "../output-terminal" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }