[package]
name = "photonic-lua"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
photonic = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

mlua = { version = "0.9.9", features = ["async", "lua54"] }

[dev-dependencies]
photonic-output-terminal = { path = "../output-terminal" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true