[package]
name = "photonic-lua"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
photonic = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

mlua = { version = "0.11.0", features = ["async", "anyhow", "lua54"] }

[dev-dependencies]
photonic-output-terminal = { path = "../output-terminal" }

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
