[package]
name = "photonic-output-net"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
photonic = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
palette = { workspace = true }

byteorder = { version = "1.5" }
