[package]
name = "photonic-output-null"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
dynamic = ["dep:photonic-dynamic", "dep:serde"]

[dependencies]
photonic = { workspace = true }
photonic-dynamic = { path = "../dynamic", optional = true }

palette = { workspace = true }
anyhow = { workspace = true }

serde = { version = "1.0.197", features = ["derive"], optional = true }

[lints]
workspace = true
