[package]
name = "photonic-output-null"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[features]
dynamic = ["dep:photonic-dynamic", "dep:serde"]

[dependencies]
photonic = { workspace = true }
photonic-dynamic = { workspace = true, optional = true }

palette = { workspace = true }
anyhow = { workspace = true }

serde = { version = "1.0.197", features = ["derive"], optional = true }

[lints]
workspace = true
