[package]
name = "photonic-output-terminal"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
photonic = { workspace = true }

palette = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["io-std", "net", "io-util"] }

nix = { version = "0.28", features = ["fs"] }
