[package]
name = "photonic-cli"
version = "0.1.0"
authors = ["Dustin Frisch <fooker@lab.sh>"]
edition = "2018"

[dependencies]
photonic-grpc-proto = { path = "../photonic-grpc-proto" }
anyhow = "1"
clap = "3.0.0-beta.5"
async-trait = "0.1.42"
tokio = {version = "1.1.1", features = [ "full" ] }
tonic = "0.6.0"
prost = "0.9.0"
serde = { version = "1.0.123", features = [ "derive" ] }
serde_json = "1.0.61"
serde_yaml = "0.8.15"
erased-serde = "0.3.13"
