[package]
name = "photonic-core"
version = "0.1.0"
authors = ["Dustin Frisch <fooker@lab.sh>"]
edition = "2018"

[features]
boxed = []

[dependencies]
palette = "0.5"
anyhow = "1"
num = "0.4"
ezing = "0.2"
crossbeam = "0.8"
async-trait = "0.1.42"
tokio = { version = "1.1.1", features = [ "time", "rt" ] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_approx_eq = "1"
