[package]
name = "photonic-effects"
version = "0.1.0"
authors = ["Dustin Frisch <fooker@lab.sh>"]
edition = "2018"

[features]
dyn = ["photonic-dyn", "serde", "humantime-serde", "csscolorparser", "evalexpr"]

[dependencies]
photonic-core = { path = "../photonic-core" }
photonic-dyn = { path = "../photonic-dyn", optional = true }
anyhow = "1"
rand = { version = "0.8", features = ["small_rng"] }
num = "0.4"
noise = "0.7"
serde = { version = "1", features = ["derive"], optional = true }
humantime-serde = { version = "1", optional = true }
csscolorparser = { version = "0.5.0", optional = true }
evalexpr = { version = "6.5.0", features = ["serde_support"], optional = true }
