[package]
name = "photonic-exec"
version = "0.1.0"
authors = ["Dustin Frisch <fooker@lab.sh>"]
edition = "2018"

[features]
dyn = [ "photonic-dyn" ]

[dependencies]
photonic-core = { path = "../photonic-core" }
photonic-dyn = { path = "../photonic-dyn", optional = true }
anyhow = "1"
shlex = "1"
byteorder = "1.3"
palette = { features = ["bytemuck"] }
bytemuck = "1.7.2"