[package]
name = "photonic-exec"
version = "0.1.0"
authors = ["Dustin Frisch <fooker@lab.sh>"]
edition = "2018"

[features]
dyn = ["photonic-dyn", "serde"]

[dependencies]
photonic-core = { path = "../photonic-core" }
photonic-dyn = { path = "../photonic-dyn", optional = true }
anyhow = "1"
shlex = "1"
byteorder = "1.3"
palette = { version = "*", features = ["bytemuck"] }
bytemuck = "1.7.2"
serde = { version = "1", features = ["derive"], optional = true }