[package]
name = "photonic-grpc-proto"
version = "0.1.0"
authors = ["Dustin Frisch <fooker@lab.sh>"]
edition = "2018"

[dependencies]
tonic = "0.5.2"
prost = "0.8.0"
prost-types = "0.8.0"
anyhow = "1"

[build-dependencies]
tonic-build = { version = "0.5.2", features = ["prost"] }
prost-build = "0.8.0"
