[package]
name = "photonic-grpc-proto"
version = "0.1.0"
authors = ["Dustin Frisch <fooker@lab.sh>"]
edition = "2018"

[dependencies]
tonic = "0.6.0"
prost = "0.9.0"
prost-types = "0.9.0"
anyhow = "1"

[build-dependencies]
tonic-build = { version = "0.6.0", features = ["prost"] }
prost-build = "0.9.0"
