[package]
name = "photonic-ledstrip"
version = "0.1.0"
authors = ["Dustin Frisch <fooker@lab.sh>"]
edition = "2018"

[dependencies]
photonic-core = {path="../photonic-core"}
anyhow = "1"
palette = "0.5"
cfg-if = "1.0.0"
serde = "1.0.125"

[target.'cfg(any(all(target_arch = "arm", target_os = "linux"), all(target_arch = "aarch64", target_os = "linux")))'.dependencies]
rs_ws281x = "0.4.2"
