[package]
name = "photonic-ledstrip"
version = "0.1.0"
authors = ["Dustin Frisch <fooker@lab.sh>"]
edition = "2018"

[features]
dyn = ["photonic-dyn", "serde"]

[dependencies]
photonic-core = { path = "../photonic-core" }
photonic-dyn = { path = "../photonic-dyn", optional = true }
anyhow = "1"
palette = "0.6"
cfg-if = "1.0.0"
serde = { version = "1.0.125", optional = true }
spidev = "0.5.0"
bitvec = "0.22.3"
