[package]
name = "photonic-wasm"
version = "0.1.0"
authors = ["Dustin Frisch <fooker@lab.sh>"]
edition = "2018"

[dependencies]
photonic-core = {path="../photonic-core"}

anyhow = "1"

wasmtime = "0.30.0"

[dev-dependencies]
photonic-console = {path="../photonic-console"}
tokio = { version = "1.12.0", features = [ "macros", "rt-multi-thread" ] }
